--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         🎉 Celebrate 🎉
       </button>
 
-      <audio id="bgMusic" autoplay>
+      <audio id="bgMusic" controls>
 <source src="song.mp3" type="audio/mp3"/>
 </audio>
     </div>
